= master

* Add support for a :delete_hook option to Unreloader#require, called when a file is deleted (jeremyevans)

* Handle cases where Module#name raises an exception (jeremyevans) (#9)

= 1.7.0 (2019-03-18)

* Add :handle_reload_errors option, for returning backtrace with error if there is an exception when reloading (jeremyevans)

= 1.6.0 (2017-02-24)

* Add Unreloader#strip_path_prefix, designed to support chrooting (jeremyevans)

= 1.5.0 (2016-03-10)

* Handle deletions of monitored files (jeremyevans)

= 1.4.0 (2016-01-15)

* Avoid use of Thread.exclusive, preventing warnings on ruby 2.3 (celsworth, jeremyevans) (#6)

= 1.3.0 (2015-04-06)

* Log when specified constant exists before loading file or does not exist after loading (jeremyevans)

* Improve logging, making it explicit when files are unloaded and reloaded (jeremyevans)

* Allow returning :ObjectSpace for require block to signal that ObjectSpace should be used to determine constants (jeremyevans)

= 1.2.1 (2015-01-27)

* Fix homepage in gemspec (jeremyevans)

= 1.2.0 (2015-01-24)

* Add Unreloader#record_split_class, for handling classes split into multiple files (jeremyevans)

* Add Unreloader#reload!, for manually checking for changed files, useful for non-rack applications (jeremyevans)

* Make most methods in the Reloader private (jeremyevans)

* Separate reloading logic into separate file, so using unreloader in production takes less memory (jeremyevans)

* Add the ability to record dependencies, making it possible to correctly support modules and superclasses (jeremyevans)

* Add :reload option, set to false to not support reloading, useful in production mode (jeremyevans)

* Document that setting the :cooldown option to nil makes the Unreloader not reload (celsworth, jeremyevans) (#3)

* Handle files in subdirectories when monitoring directories (celsworth) (#2)

= 1.1.0 (2014-09-25)
